--- a/index.css
+++ b/index.css
@@ -43,11 +43,25 @@ header {
 }
 
 .section2 {
+    border-top: 7px solid rgb(209, 101, 0);
+    border-radius: 5px;
     background-image: url(./pictures/bear.jpg);
     background-color: rgba(29, 23, 23, 0.726);
     background-blend-mode: darken;
     background-size: contain;
     color: white;
+    width: 350px;
+}
+
+.header2 {
+    text-transform: uppercase;
+}
+
+h1,
+h2,
+h3 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: lighter;
 }
 
 .button {
